[tool.poetry]
name = "13-1-"
version = "0.1.0"
description = ""
authors = ["V_A_N <V_A_N-1_94@mail.ru>"]
readme = "README.md"
packages = [{ include = "13" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.liter.dependencies]
mypy = "^1.7.1"
flake8 = "^6.1.0"
isort = "^5.13.2"
black = "^23.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'